# mld_kerguelen

./: .gitignore  README.md  pyproject.toml  run_analysis.py  statistics.md  summary.md
1_data_processing/: ARGO.ipynb  CMA.ipynb  CORA.ipynb  CORA_ARGO.ipynb  GLORYS.ipynb  GLORYS_CL.ipynb  GLORYS_fig_section.ipynb  MEOP.ipynb  process_CMA.py  process_GLORYS.py  process_GLORYS_CL.py  process_GLORYS_section.py  process_mld_data.py  processing_common.py
2_compute_fPCA_R/: script_PCA_CM_2026.R  script_PCA_GLORYS_2026.R  script_PCA_GLORYS_CL_2026.R  script_PCA_GLORYS_random_sampling_2026.R
3_generate_figures/: Figure_10_KERFIX.ipynb  Figure_10_KERFIX.py  Figure_1_prof_dist_year.ipynb  Figure_1_prof_dist_year.py  Figure_2_map_mld.ipynb  Figure_2_map_mld.py  Figure_3_seasonal_cycle.ipynb  Figure_3_seasonal_cycle.py  Figure_4_MU_modes.ipynb  Figure_4_MU_modes.py  Figure_4_MU_modes_old.ipynb  Figure_5_maps_cp.ipynb  Figure_5_maps_cp.py  Figure_6_quadratic_error.ipynb  Figure_6_quadratic_error.py  Figure_7_1D_trends.ipynb  Figure_7_1D_trends.py  Figure_8_trend_maps.ipynb  Figure_8_trend_maps.py  Figure_9_sections.ipynb  Figure_9_sections.py  Figure_A1_PACE_sampling_trends.py  Figure_A2_PACE_sampling_trend_maps.py  Figure_A3_deep_region_trends.py  Table_1_trends.py  create_rec_datasets.py  figure_common.py
data/: README.md  kerfix.csv
scripts/: compare_processed_reference.py  setup_r_packages.R
