[project]
name = "mld-kerguelen"
version = "0.1.0"
description = "Kerguelen mixed-layer-depth analysis pipeline"
requires-python = ">=3.10"
dependencies = [
    "cmocean>=4.0.3",
    "gsw>=3.6.20",
    "matplotlib>=3.8",
    "netcdf4>=1.6",
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.11",
    "tomli>=2.0; python_version < '3.11'",
    "xarray>=2023.11",
]

[tool.mld-kerguelen.r]
packages = [
    "fdapace",
]
repos = "https://cloud.r-project.org"
library = ".r-lib"
